# mcp-client-example

./: README.md  app.py  mcp-host.py  mcp_host.py  pyproject.toml  requirements.txt
